workspace/log/build_2024-07-06_17-06-11/ps5_controller/stderr.log
  File "/home/mobot/ROS2/workspace/install/ps5_controller/lib/python3.12/site-packages/ps5_controller/ps5_publisher_node.py", line 35
    if y < .1 and y > -.1 then
                          ^^^^
SyntaxError: invalid syntax

